# diceystats

./: Cargo.toml  README.md  rustfmt.toml
src/: dice.rs  dist.rs  lib.rs  main.rs  sparse_dist.rs  weird_dist.rs
src/dices/: dist.rs  list.rs  mod.rs  parse.rs  print.rs  random.rs  simplify.rs
