[package]
name = "diceystats"
description = "Library to parse and interact with dice formulas"
authors = ["Pazzaz <pazzaz.sundqvist@gmail.com>"]
version = "0.2.1"
edition = "2024"
keywords = ["random", "dice"]
license = "MIT"
homepage = "https://github.com/Pazzaz/diceystats"
repository = "https://github.com/Pazzaz/diceystats"

[dependencies]
num = "0.4.3"
peg = "0.8.4"
rand = "0.9"

[dev-dependencies]
rand_chacha = "0.9"
